@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Documentation]
+  - Noted a KNOWN ISSUE when using Config::General to configure this.
 
 v0.4.2    2023-02-22 09:07:28+00:00 Europe/London
   [Bug Fixes]
